--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -18,3 +18,11 @@ address > a{
     color:white;
     text-decoration: none;
 }
+
+#contact{
+    background-color: rgba(20,40,100,0.8);
+}
+
+header a{
+    color:rgba(20,40,100,0.8);
+}
